--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>FCC Tribute Page</title>
 </head>
 <body>
     <div id="main">
