--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -65,7 +65,7 @@
         <footer>
             <h3>
                 If you have time, you should read more about this incredible human being on his 
-                <a href="http://" target="_blank" rel="noopener noreferrer" id="tribute-link">Wikipedia entry</a>.
+                <a href="" target="_blank" rel="noopener noreferrer" id="tribute-link">Wikipedia entry</a>.
             </h3>
         </footer>
     </div>
